<resources>
    <string name="app_name">My Application</string>
    <string name="title_how_was_your_day">오늘 하루는 어땠나요?</string>
    <string name="subtitle_select_stamp">감정우표를 선택해주세요</string>
    <string name="description_custom_question">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="stamp_happy">더없이 행복한 하루였어요</string>
    <string name="stamp_excited">들뜨고 흥분돼요</string>
    <string name="stamp_soso">평범한 하루였어요</string>
    <string name="stamp_unrest">생각이 많아지고 불안해요</string>
    <string name="stamp_upset">부글부글 화가 나요</string>
</resources>